# epub-translator

./: .gitignore  pyproject.toml  translate.py
configs/: default.yaml
epub_translator/llm/: core.py  executor.py
epub_translator/translation/: translator.py
epub_translator/xml_translator/: callbacks.py  stream_mapper.py  translator.py
