[project]
name = "epub-translator"
version = "0.1.9"
description = "Translate the epub book using LLM. The translated book will retain the original text and list the translated text side by side with the original text."
keywords = ["epub", "llm", "translation", "translator"]
authors = [
    {name = "Tao Zeyu", email = "i@taozeyu.com"}
]
maintainers = [
    {name = "Tao Zeyu", email = "i@taozeyu.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11,<3.14"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Localization",
    "Topic :: Text Processing :: Markup",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "tiktoken>=0.12.0,<1.0.0",
    "jinja2>=3.1.6,<4.0.0",
    "resource-segmentation>=0.0.7,<0.1.0",
    "openai>=2.14.0,<3.0.0",
    "mathml2latex (>=0.2.12,<0.3.0)",
]

[project.urls]
Homepage = "https://hub.oomol.com/package/books-translator"
Repository = "https://github.com/oomol-lab/epub-translator"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    {include = "epub_translator" }
]

[tool.poetry.group.dev.dependencies]
pylint = "^3.3.7"
tqdm = "^4.67.1"
ruff = "^0.14.10"
pytest = "^9.0.2"
pyright = "^1.1.407"
omegaconf = "^2.3.0"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
